Kmeans for Customer segmenatation

--- a/KMeans_Problem4.ipynb
+++ b/KMeans_Problem4.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "58888a0f-e95c-4689-966c-30d7a429d74d",
+   "metadata": {},
+   "source": [
+    "<h4>For the Mall-Customers dataset Implement k-means clustering algorithm and visualize the cluseters.</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa5724f5-0556-426e-8e42-a4f55585dd1d",
+   "id": "44c26666-2810-40fa-8d6e-f9e7c3e80567",
    "metadata": {},
    "outputs": [],
    "source": [
